--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -21,7 +21,32 @@
 .csl-entry {
   @apply my-5;
 }
+@layer components {
+  .gradient-text {
+    @apply bg-gradient-to-r from-purple-500  to-indigo-500 bg-clip-text text-transparent;
+  }
+  .gradient-border {
+    @apply relative;
+  }
 
+  .gradient-border::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    margin: -1px;
+    border-radius: inherit;
+    background: linear-gradient(
+      to right,
+      theme('colors.purple.400'),
+      theme('colors.pink.500'),
+      theme('colors.red.500')
+    );
+  }
+}
 /* https://stackoverflow.com/questions/61083813/how-to-avoid-internal-autofill-selected-style-to-be-applied */
 input:-webkit-autofill,
 input:-webkit-autofill:focus {
